--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,4 +22,13 @@ html {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
+.about_container {
+    padding: 70px 60px;
+    text-align: center;
+    background-color: #197278;
+    color: #ffffff;
+    letter-spacing: 1.3px;
+    
+}
+
 
